--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -1,6 +1,16 @@
+$primary-gray: #354f52;
+$primary-blue: #2ec4b6;
+$secondary-gray: #2f3e46;
+
 .application-container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("../assets/images/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     margin: 0;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
 }
