--- a/images/frontend/angular-portfolio-website/src/app/header/header.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/header/header.component.html
@@ -1,9 +1,10 @@
 <nav class="header">
-    <a href="">home</a>
+    <a href="">Home</a>
 
     <div>
-        <a href="">about</a>
-        <a href="">projects</a>
-        <a href="">contact</a>
+        <a href="">About</a>
+        <a href="">Projects</a>
+        <a href="">Contact</a>
+
     </div>
 </nav>
