--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -1,16 +1,16 @@
-$primary-gray: #354f52;
-$primary-blue: #2ec4b6;
-$secondary-gray: #2f3e46;
+@import url("https://use.typekit.net/pwb5esr.css");
+
+
+$primary-yellow: #EEFF00;
+$primary-blue: #0700C8;
+
 
 .application-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-image: url("../assets/images/background.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
+    background-color: $primary-yellow;
+    padding: 5rem;
+    width: calc(100vw - 11rem);
+    height: calc(100vh - 11rem);
+    overflow: hidden;
 }
