--- a/images/frontend/angular-portfolio-website/src/styles.scss
+++ b/images/frontend/angular-portfolio-website/src/styles.scss
@@ -4,6 +4,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'CoFo Sans', sans-serif;                                            
-    font-weight: 500;
+    font-family: "heimat-mono", sans-serif;                              
+    font-weight: 400;
+    font-size: 15pt;
 }
