refactor: started updating style homepage(w.i.p)
started at applying new style to homepage main content of page

--- a/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
@@ -1,8 +1,14 @@
 <div class="homeContainer">
-    <h1>{{introduction}}</h1>
-    <h2>{{content}}</h2>
-    <div class="buttonContainer">
-        <a href="">About</a>
-        <a href="">Projects</a>
+    <img src={{image}} alt="" class="homepageCarousel">
+    <div class="homepageContent">
+        <div>
+        <p class="homePageIntroduction">
+            {{content}}
+        </p>
+        <h2 class="homePageTitle">{{title[0]}}</h2>
+        </div>
+        <h2 class="homePageTitle">{{title[1]}}</h2>
+        <h2 class="homePageTitle">{{title[2]}}</h2>
+
     </div>
 </div>
