--- a/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.scss
@@ -1,45 +1,51 @@
-$primary-blue: #2ec4b6;
-$primary-purple: #04052e;
-$primary-yellow: #ffd500;
+$primary-yellow: #EEFF00;
+$primary-blue: #0700C8;
+
 
 .homeContainer{
     display: flex;
-    flex-direction: column;
+    box-sizing: border-box;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    border-left: #04052e 2px solid;
+    border-right: #04052e 2px solid;
+    margin: 2vh 0;
+    padding: 7vw;
+    height: 70vh;
 }
 
-h1{
-    color: $primary-yellow;
-    text-shadow: 2px 3px 3px white;
-    font-size: 70pt;
-    font-weight: 800;
-    padding: 2rem;
+.homepageCarousel{
+    width: 30rem;
+    height: 30rem;
+    object-fit: fill;
 }
 
-h2{
-    color: white;
+.homepageContent{
+    width: 50rem;
+    padding-left: 10%;
+}
+
+.homepageContent div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.homePageIntroduction{
     font-size: 20pt;
     font-weight: 600;
-    width: 45%;
-    text-align: center;
+    width: 65%;
+    
 }
 
-.buttonContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 30%;
-    margin: 3rem;
+.homePageTitle{
+    font-size: 100pt;
+    font-weight: 800;
+    text-align: end;
 }
 
-.buttonContainer a{
-    text-decoration: none;
-    color: white;
-    padding: 1em 3em;
-    background-color: $primary-blue;
-    text-align: center;
-    box-shadow: 0px 0px 6px white;
-
+.homepageContent .homePageTitle:last-of-type{
+    color: $primary-blue;
+    text-align: start;
 }
