--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
@@ -1,6 +1,6 @@
-$primary-blue: #2ec4b6;
-$primary-purple: #04052e;
-$primary-yellow: #ffd500;
+$primary-yellow: #EEFF00;
+$primary-blue: #0700C8;
+
 
 .header{
     display: flex;
@@ -44,12 +44,12 @@ $primary-yellow: #ffd500;
 }
 
 .navLine{
-    width: 97%;
+    width: 95%;
     border: black 2px solid;
 }
 
 .navDot{
-    margin: -0.125% -0.125%;
+    margin: -0.125% -0.250%;
     border-radius: 50%;
     border: black 5px solid;
 }
