--- a/images/frontend/angular-portfolio-website/src/app/app.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="application-container">
-  <app-header></app-header>
-  <app-main></app-main>
+  <app-header/>
+  <app-main/>
+  <app-secondary-nav/>
 </div>
