--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -8,7 +8,8 @@ $primary-blue: #0700C8;
 .application-container{
     display: flex;
     flex-direction: column;
-    background-color: $primary-yellow;
+    background: $primary-yellow;
+    background-image: url("../assets/images/background_dots.png");
     padding: 5rem;
     width: calc(100vw - 10rem);
     height: calc(100vh - 10rem);
