feat: started on about page(w.i.p)
started building the about page of portfolio website and added routing

--- a/images/frontend/angular-portfolio-website/src/app/app.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="application-container">
   <app-header/>
-  <app-main/>
+  <div class="content">
+    <router-outlet/>
+  </div>
   <app-secondary-nav/>
 </div>
