--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -15,3 +15,13 @@ $primary-blue: #0700C8;
     height: calc(100vh - 10rem);
     overflow: hidden;
 }
+
+.content{
+    display: flex;
+    justify-content: center;
+    margin: 2vh 0;
+    padding-top: 5vh;
+    height: 70vh;
+    border-left: 3px solid;
+    border-right: 3px solid;
+}
