--- a/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
@@ -2,13 +2,13 @@
     <img src={{image}} alt="" class="homepageCarousel">
     <div class="homepageContent">
         <div>
-        <p class="homePageIntroduction">
+        <p class="homePageIntroduction textSemiBold">
             {{content}}
         </p>
-        <h2 class="homePageTitle">{{title[0]}}</h2>
+        <h2 class="title">{{title[0]}}</h2>
         </div>
-        <h2 class="homePageTitle">{{title[1]}}</h2>
-        <h2 class="homePageTitle">{{title[2]}}</h2>
+        <h2 class="title">{{title[1]}}</h2>
+        <h2 class="title">{{title[2]}}</h2>
 
     </div>
 </div>
