--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="header">
     <div class="mainNav">
-        <a href="/" class="mainNavLink mainNavLinkActive">Home</a>
-        <a href="/about" class="mainNavLink">About</a>
+        <a href="/" class="subtitle mainNavLinkActive">Home</a>
+        <a href="/about" class="subtitle mainNavLink">About</a>
     </div>
     <div class="navDesign">
         <div class="navLine"></div>
