--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -1,27 +1,24 @@
-@import url("https://use.typekit.net/pwb5esr.css");
-
-
-$primary-yellow: #EEFF00;
-$primary-blue: #0700C8;
-
+@import "./core/styles/variables.scss";
+@import "./core/styles/font.scss";
 
 .application-container{
     display: flex;
     flex-direction: column;
     background: $primary-yellow;
-    background-image: url("../assets/images/background_dots.png");
+    background-image: url("../assets/images/backgroundDots.png");
     padding: 5rem;
-    width: calc(100vw - 10rem);
-    height: calc(100vh - 10rem);
-    overflow: hidden;
+    height: 100%;
+
 }
 
 .content{
     display: flex;
     justify-content: center;
-    margin: 2vh 0;
-    padding-top: 5vh;
+    margin: 7vh 0 0;
+    padding-top: 2vh;
     height: 70vh;
+    width: calc(90vw - 5rem);
     border-left: 3px solid;
     border-right: 3px solid;
+    align-items: center;
 }
