--- a/images/frontend/angular-portfolio-website/src/app/core/pages/about/about.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/about/about.component.html
@@ -1,28 +1,32 @@
 <div class="aboutContainer">
     <div class="aboutMeContainer">
         <img src={{image}} alt={{image}}>
-        <p>
+        <p class="textSemiBold">
             {{content}}
         </p>
     </div>
 
     <div class="aboutSkillsContainer">
         <div class="skills">
-            <h2>Hards Skills</h2>
-            <ul *ngFor="let hardSkill of hardSkills">
-                <li>{{hardSkill}}</li>
-            </ul>
-            <h2>Soft Skills</h2>
-            <ul *ngFor="let softSkill of softSkills">
-                <li>{{softSkill}}</li>
-            </ul>
+            <div>
+                <h2 class="title">Hards Skills</h2>
+                <ul *ngFor="let hardSkill of hardSkills">
+                    <li class="textRegular">{{hardSkill}}</li>
+                </ul>
+            </div>
+            <div>
+                <h2 class="title">Soft Skills</h2>
+                <ul *ngFor="let softSkill of softSkills">
+                    <li class="textRegular">{{softSkill}}</li>
+                </ul>
+            </div>
         </div>
         <div class="links">
-            <a href="#">#</a>
-            <a href="#">#</a>
-            <a href="#">#</a>
-            <a href="#">#</a>
-            <a href="#">#</a>
+            <a href="https://www.linkedin.com/in/niko-brusselaers-26189b1b8/" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="https://github.com/niko-brusselaers" target="_blank"><i class="icon-github"></i></a>
+            <a href="../../../../assets/cv_Niko_Brusselaers.pdf" target="_blank"><i class="icon-cv"></i></a>
+            <a href="mailto:niko.brusselaers@outlook.com" target="_blank"><i class="icon-mail"></i></a>
+            <a href="tel:+32494143066" target="_blank"><i class="icon-phone"></i></a>
         </div>
     </div>
 
