--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
@@ -1,8 +1,10 @@
-$primary-yellow: #EEFF00;
-$primary-blue: #0700C8;
+@import "../../../styles/variables.scss";
+@import "../../../styles/font.scss";
 
 
 .header{
+    position: absolute;
+    width: calc(90vw - 4.6rem);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,15 +19,12 @@ $primary-blue: #0700C8;
     justify-content: space-between;
 }
 
-.mainNavLink{
+.mainNav a{
     display: flex;
     width: 45%;
     height: 100%;
     border: 2px solid black;
-    color: black;
     text-decoration: none;
-    font-size: 20pt;
-    font-weight: 600;
     align-items: center;
     justify-content: center;
 }
@@ -36,6 +35,7 @@ $primary-blue: #0700C8;
 
 .navDesign{
     display: flex;
+    width: clamp(5vw,10vw,70vw);
     height: 100%;
     align-items: flex-start;
     margin-left: 2rem;
@@ -44,7 +44,7 @@ $primary-blue: #0700C8;
 }
 
 .navLine{
-    width: 95%;
+    width: clamp(1%,95%,95%);
     border: black 2px solid;
 }
 
@@ -52,4 +52,16 @@ $primary-blue: #0700C8;
     margin: -0.125% -0.250%;
     border-radius: 50%;
     border: black 5px solid;
+}
+
+@media screen and (max-width: 1300px) {
+
+
+    .mainNav{
+        width:  calc(100vw - 5rem);
+    }
+
+    .navLine {
+        width: 80%;
+    }
 }
