--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.scss
@@ -1,5 +1,7 @@
+@import "../../../styles/variables.scss";
+
 .secondaryNav{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100vw;
