style: created project page template

--- a/images/frontend/angular-portfolio-website/src/app/core/pages/about/about.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/about/about.component.html
@@ -12,8 +12,8 @@
                 <h2 class="title">Hards Skills</h2>
                 <div class="hardSkillContainer" >
                     <div *ngFor="let hardSkill of hardSkills" class="textRegular">
-                        <i [class]="'icon-' + hardSkill.iconClassName+' icon'"></i>
-                        <span >{{hardSkill.name}}</span>
+                        <i [class]="'icon-' + hardSkill+' icon'"></i>
+                        <span >{{hardSkill}}</span>
                     </div>
                 </div>
             </div>
