--- a/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
@@ -3,101 +3,102 @@
     text-align: center;
 }
 
-.icon-linkedin{
+/* Social Icons */
+.icon-linkedin {
     content: url("../../../assets/icons/linkedin_icon.svg");
-
 }
 
-.icon-github{
+.icon-github {
     content: url("../../../assets/icons/github_icon.svg");
 }
 
-.icon-cv{
+.icon-cv {
     content: url("../../../assets/icons/cv_icon.svg");
 }
 
-.icon-mail{
+.icon-mail {
     content: url("../../../assets/icons/mail_icon.svg");
 }
 
-.icon-phone{
+.icon-phone {
     content: url("../../../assets/icons/phone_icon.svg");
 }
 
+/* Technology Icons */
 /* HTML5 */
-.icon-html5 {
+.icon-HTML5 {
     content: url("../../../assets/icons/html_icon.svg");
 }
 
 /* CSS3 */
-.icon-css3 {
+.icon-CSS3 {
     content: url("../../../assets/icons/css3_icon.svg");
 }
 
 /* PHP */
-.icon-php {
+.icon-PHP {
     content: url("../../../assets/icons/php_icon.svg");
 }
 
 /* JavaScript, React(Typescript), TailwindCSS */
-.icon-javascript {
+.icon-JavaScript {
     content: url("../../../assets/icons/javascript_icon.svg");
 }
 
-.icon-typescript {
+.icon-Typescript {
     content: url("../../../assets/icons/typescript_icon.svg");
 }
 
-.icon-react {
+.icon-React {
     content: url("../../../assets/icons/react_icon.svg");
 }
 
-.icon-tailwindcss {
+.icon-TailwindCSS {
     content: url("../../../assets/icons/tailwindcss_icon.svg");
 }
 
 /* Git, NodeJs, Docker, Laravel */
-.icon-git {
+.icon-Git {
     content: url("../../../assets/icons/git_icon.svg");
 }
 
-.icon-nodejs {
+.icon-NodeJs {
     content: url("../../../assets/icons/node_icon.svg");
 }
 
-.icon-docker {
+.icon-Docker {
     content: url("../../../assets/icons/docker_icon.svg");
 }
 
-.icon-laravel {
+.icon-Laravel {
     content: url("../../../assets/icons/laravel-icon.svg");
 }
 
 /* MySQL, NoSQL, MongoDB */
-.icon-mysql {
+.icon-MySQL {
     content: url("../../../assets/icons/mysql_icon.svg");
 }
 
-.icon-nosql {
+.icon-NoSQL {
     content: url("../../../assets/icons/nosql_icon.svg");
 }
 
-.icon-mongodb {
+.icon-MongoDB {
     content: url("../../../assets/icons/mongodb_icon.svg");
 }
 
 /* Framer-motion */
-.icon-framer-motion {
+.icon-Framer-motion {
     content: url("../../../assets/icons/framer-motion_icon.svg");
 }
 
 /* Jest */
-.icon-jest {
+.icon-Jest {
     content: url("../../../assets/icons/jest_icon.svg");
 }
 
 /* Express */
-.icon-express {
+.icon-Express {
     content: url("../../../assets/icons/express_icon.svg");
 }
 
@@ -106,23 +107,11 @@
     content: url("../../../assets/icons/react-router_icon.svg");
 }
 
-/* Adobe XD, Photoshop, Illustrator, Premiere Pro, After Effects */
-.icon-adobe-xd {
-    content: url("../../../assets/icons/adobe-xd_icon.svg");
+/* angular */
+.icon-Angular {
+    content: url("../../../assets/icons/angular_icon.svg");
 }
 
-.icon-photoshop {
-    content: url("../../../assets/icons/adobe-photoshop_icon.svg");
-}
-
-.icon-illustrator {
-    content: url("../../../assets/icons/adobe-illustrator_icon.svg");
-}
-
-.icon-premiere-pro {
-    content: url("../../../assets/icons/adobe-premiere_icon.svg");
-}
-
-.icon-after-effects {
-    content: url("../../../assets/icons/adobe-after-effects_icon.svg");
+.icon-hyperlink{
+    content: url("../../../assets/icons/hyperlink_icon.svg");
 }
