--- a/images/frontend/angular-portfolio-website/src/app/core/pages/project/project.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/project/project.component.html
@@ -1,10 +1,10 @@
 <div class="projectContainer">
     <div class="projectDetailsContainer">
-        <h1 class="title">{{project.name}} </h1>
+        <h1 class="subtitle projectTitle">{{project.name}}</h1>
         <div class="detailsContainer2">
             <div class="projectlinkContainer">
-                <div *ngIf="project.link"><a href={{project.link.toString()}} class="textSemiBold">check out here </a><i class="icon-hyperlink icon"></i></div>
-                <div><a *ngFor="let link of project.githubLink" href={{link.toString()}} class="textSemiBold" >github repository </a><i class="icon-hyperlink icon"></i></div>
+                <div *ngIf="project.url"><a [href]="'http://' + project.url"class="textSemiBold" target="_blank">Check out here</a><i class="icon-hyperlink icon"></i></div>
+                <div><a *ngFor="let link of project.githubLink" [href]="'http://' + link" class="textSemiBold" target="_blank">github repository </a><i class="icon-hyperlink icon"></i></div>
             </div>
             <div class="projectDescriptionContainer">
                 <div class="technologiesContainer">
