--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.html
@@ -1,10 +1,5 @@
 <div class="secondaryNav">
     <div>
-        <a [routerLink]="['/project','link1']" class="secondaryNavLink">link 1</a>
-        <a [routerLink]="['/project','link2']" class="secondaryNavLink">link 2</a>
-        <a [routerLink]="['/project','link3']" class="secondaryNavLink">link 3</a>
-        <a [routerLink]="['/project','link4']" class="secondaryNavLink">link 4</a>
-        <a [routerLink]="['/project','link5']" class="secondaryNavLink">link 5</a>
-        <a [routerLink]="['/project', 'link6']"  class="secondaryNavLink">link 6</a>
+        <a *ngFor="let project of projects" [routerLink]="['/project', project]" class="secondaryNavLink">{{ project }}</a>
     </div>
 </div>
