--- a/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
@@ -115,3 +115,15 @@
 .icon-hyperlink{
     content: url("../../../assets/icons/hyperlink_icon.svg");
 }
+
+.icon-next{
+    content: url("../../../assets/icons/next_icon.svg");
+    width: 5em;
+
+}
+
+.icon-previous{
+    content: url("../../../assets/icons/previous_icon.svg");
+    width: 5em;
+
+}
