fix: removed animation from carousel

--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<c-carousel *ngIf="images && images.length > 0" [interval]="6000" class="carousel" [touch]="true" [animate]="true" >
+<c-carousel *ngIf="images && images.length > 0" [interval]="6000" class="carousel" [touch]="true" [animate]="false" >
         <c-carousel-inner >
             <c-carousel-item *ngFor="let image of images">
                 <img
