refactor: updated carousel component

--- a/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/home/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="homeContainer">
-        <app-carousel  class="carousel" [projectName]="undefined"></app-carousel>
+        <app-carousel  class="carousel" [images]="images"></app-carousel>
     <div class="homepageContent">
         <div>
         <p class="homePageIntroduction textSemiBold">
