--- a/images/frontend/angular-portfolio-website/src/app/core/pages/project/project.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/core/pages/project/project.component.html
@@ -14,6 +14,6 @@
                 </div>
             </div>
         </div>
-        <app-carousel *ngIf="project.name" class="carousel" [projectName]="project.name"></app-carousel>
+        <app-carousel *ngIf="project.name" class="carousel" [images]="project.image"></app-carousel>
         <!-- <img class="projectImage" src={{project.image}} alt={{project.image}}> -->
     </div>
