--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.scss
@@ -1,17 +1,12 @@
 @import "@coreui/coreui/scss/coreui";
 @import "../../../styles/icons.scss";
 
-.carousel{
+.carouselContainer{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-
-img{
-    width: 100%;
-    height: 100%;
+    justify-content: space-between;
+    background-size: contain;
+    aspect-ratio: 16/9;
+    background-repeat: no-repeat;
+    background-position: center;
 }
