--- a/images/frontend/angular-portfolio-website/src/app/app.component.html
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="application-container">
   <app-header/>
-  <div class="content">
-    <router-outlet/>
+  <div class="content" [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
   </div>
   <app-secondary-nav/>
 </div>
