docs: added project and project images to json

--- a/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/styles/icons.scss
@@ -112,6 +112,10 @@
     content: url("../../../assets/icons/angular_icon.svg");
 }
 
+.icon-Socket-io {
+    content: url("../../../assets/icons/socketio-icon.svg");
+}
+
 .icon-hyperlink{
     content: url("../../../assets/icons/hyperlink_icon.svg");
 }
