--- a/angular-portfolio-website/src/app/core/styles/font.scss
+++ b/angular-portfolio-website/src/app/core/styles/font.scss
@@ -9,12 +9,12 @@
 /* Styles for other screens (aspect ratio less than 21:9) */
 
   .title {
-    font-size: 7.5vw;
+    font-size: 7vw;
     font-weight: 800;
   }
 
   .subtitle {
-    font-size: 1.35vw;
+    font-size: 1.25vw;
     font-weight: 700;
   }
 
@@ -24,7 +24,7 @@
   }
 
   .textRegular {
-    font-size: 1vw;
+    font-size: .8vw;
     font-weight: 400;
   }
 
