--- a/angular-portfolio-website/src/app/app.component.scss
+++ b/angular-portfolio-website/src/app/app.component.scss
@@ -15,10 +15,9 @@
 .content{
     display: flex;
     justify-content: center;
-    margin: 7vh 0 0;
-    padding-top: 2vh;
+    margin-top: 7vh;
     height: 70vh;
-    width: 100%;
+    width: 99.5%;
     border-left: 3px solid;
     border-right: 3px solid;
     align-items: center;
