--- a/angular-portfolio-website/src/app/core/pages/project/project.component.scss
+++ b/angular-portfolio-website/src/app/core/pages/project/project.component.scss
@@ -4,7 +4,7 @@
 
 .projectContainer{
     height: 65vh;
-    padding: 3vh 5vw;
+    max-width: 80vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -33,13 +33,14 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: space-evenly;
+    justify-content: center;
     height: 80%;
 
     div{
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding: .5em 0;
 
         a{
         text-decoration: none;
@@ -52,7 +53,6 @@
     width: 60%;
     p{
         width: 100%;
-
     }
 }
 
@@ -85,4 +85,32 @@
 
 .projectTitle{
     font-size: 3vw;
+}
+
+
+@media screen and (max-width:1300px) {
+    
+    .detailsContainer2{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+
+        .projectlinkContainer{
+            width: 100%;
+            height: 20%;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+        }
+
+        .projectDescriptionContainer{
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width:1000px) {
+    
 }
