--- a/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.html
+++ b/angular-portfolio-website/src/app/core/shared/components/carousel/carousel.component.html
@@ -1,5 +1,4 @@
-<div class="carouselContainer" [ngStyle]="{'background-image': getCurrentImage(), 'width': width, 'height': height}">
-    
-    <div *ngIf="singleImage === false" class="icon-previous" (click)="selectPreviousImage()"></div>
-    <div *ngIf="singleImage === false" class="icon-next" (click)="selectNextImage()"></div>
+<div class="carouselContainer" [ngStyle]="{'background-image': getCurrentImage(), 'width': width, 'height': height}" [@fadeInOut]="isFading">
+  <div *ngIf="singleImage === false" class="icon-previous" (click)="selectPreviousImage();"></div>
+  <div *ngIf="singleImage === false" class="icon-next" (click)="selectNextImage();"></div>
 </div>
